[chore] wrap up lesson
