# db/sqlc/models.go
@@ -8,47 +8,60 @@ import (
 	"time"
 
 	"github.com/google/uuid"
+	"github.com/jackc/pgx/v5/pgtype"
 )
 
 type Account struct {
-	ID        int64     `json:"id"`
-	Owner     string    `json:"owner"`
-	Balance   int64     `json:"balance"`
-	Currency  string    `json:"currency"`
-	CreatedAt time.Time `json:"created_at"`
+	ID        int64            `json:"id"`
+	Owner     string           `json:"owner"`
+	Balance   int64            `json:"balance"`
+	Currency  string           `json:"currency"`
+	CreatedAt pgtype.Timestamp `json:"created_at"`
 }
 
 type Entry struct {
-	ID        int64     `json:"id"`
-	AccountID int64     `json:"account_id"`
-	Amount    int64     `json:"amount"`
-	CreatedAt time.Time `json:"created_at"`
+	ID        int64            `json:"id"`
+	AccountID int64            `json:"account_id"`
+	Amount    int64            `json:"amount"`
+	CreatedAt pgtype.Timestamp `json:"created_at"`
 }
 
 type Session struct {
-	ID           uuid.UUID `json:"id"`
-	Username     string    `json:"username"`
-	RefreshToken string    `json:"refresh_token"`
-	UserAgent    string    `json:"user_agent"`
-	ClientIp     string    `json:"client_ip"`
-	IsBlocked    bool      `json:"is_blocked"`
-	ExpiresAt    time.Time `json:"expires_at"`
-	CreatedAt    time.Time `json:"created_at"`
+	ID           uuid.UUID        `json:"id"`
+	Username     string           `json:"username"`
+	RefreshToken string           `json:"refresh_token"`
+	UserAgent    string           `json:"user_agent"`
+	ClientIp     string           `json:"client_ip"`
+	IsBlocked    bool             `json:"is_blocked"`
+	ExpiresAt    time.Time        `json:"expires_at"`
+	CreatedAt    pgtype.Timestamp `json:"created_at"`
 }
 
 type Transfer struct {
-	ID            int64     `json:"id"`
-	FromAccountID int64     `json:"from_account_id"`
-	ToAccountID   int64     `json:"to_account_id"`
-	Amount        int64     `json:"amount"`
-	CreatedAt     time.Time `json:"created_at"`
+	ID            int64            `json:"id"`
+	FromAccountID int64            `json:"from_account_id"`
+	ToAccountID   int64            `json:"to_account_id"`
+	Amount        int64            `json:"amount"`
+	CreatedAt     pgtype.Timestamp `json:"created_at"`
 }
 
 type User struct {
-	Username         string    `json:"username"`
-	HashedPassword   string    `json:"hashed_password"`
-	Email            string    `json:"email"`
-	FullName         string    `json:"full_name"`
-	PasswordChangeAt time.Time `json:"password_change_at"`
-	CreatedAt        time.Time `json:"created_at"`
+	Username         string           `json:"username"`
+	HashedPassword   string           `json:"hashed_password"`
+	Email            string           `json:"email"`
+	FullName         string           `json:"full_name"`
+	PasswordChangeAt time.Time        `json:"password_change_at"`
+	CreatedAt        pgtype.Timestamp `json:"created_at"`
+	IsEmailVerified  bool             `json:"is_email_verified"`
+	Role             string           `json:"role"`
+}
+
+type VerifyEmail struct {
+	ID         int64     `json:"id"`
+	Username   string    `json:"username"`
+	Email      string    `json:"email"`
+	SecretCode string    `json:"secret_code"`
+	IsUsed     bool      `json:"is_used"`
+	CreatedAt  time.Time `json:"created_at"`
+	ExpiredAt  time.Time `json:"expired_at"`
 }
